Create the products section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
         </div>
     </header>
     <!-- End of hero -->
+    <!-- Products -->
+    <section class="products">
+        <div class="section-title">
+            <h2>our products</h2>
+        </div>
+        <div class="products-center">
+
+        </div>
+    </section>
+    <!-- End of products -->
     <script src="app.js"></script>
 </body>
 
