--- a/index.html
+++ b/index.html
@@ -37,8 +37,15 @@
             <h2>our products</h2>
         </div>
         <div class="products-center">
-
+            <article class="product">
+                <div class="img-container">
+                    <img src="./images/product-1.jpeg" alt="product" class="product-img">
+                    <button class="bag-btn" data-id="1"><i class="fa fa-shopping-cart"></i>add to bag</button>
+                </div>
+            </article>
         </div>
+        <h3>queen bed</h3>
+        <h4>$134</h4>
     </section>
     <!-- End of products -->
     <script src="app.js"></script>
