Create the cart div

--- a/index.html
+++ b/index.html
@@ -42,12 +42,24 @@
                     <img src="./images/product-1.jpeg" alt="product" class="product-img">
                     <button class="bag-btn" data-id="1"><i class="fa fa-shopping-cart"></i>add to bag</button>
                 </div>
+                <h3>queen bed</h3>
+                <h4>$134</h4>
             </article>
+
         </div>
-        <h3>queen bed</h3>
-        <h4>$134</h4>
+
     </section>
     <!-- End of products -->
+    <!-- cart -->
+    <div class="cart-overlay">
+        <div class="cart">
+            <span class="close-cart">
+                <i class="fa fa-window-close"></i>
+                <h2>Your cart</h2>
+            </span>
+        </div>
+    </div>
+    <!-- end of cart -->
     <script src="app.js"></script>
 </body>
 
