--- a/index.html
+++ b/index.html
@@ -57,8 +57,32 @@
                 <i class="fa fa-window-close"></i>
                 <h2>Your cart</h2>
             </span>
+            <div class="cart-content">
+                <div class="cart-item">
+                    <img src="./images/product-1.jpeg" alt="product">
+                    <div>
+                        <h4>Queen bed</h4>
+                        <h5>$900.00</h5>
+                        <span class="remove-item">remove</span>
+                    </div>
+                    <div>
+                        <i class="fa fa-chevron-up">
+
+                        </i>
+                        <p class="item-amount">1</p>
+                        <i class="fa fa-chevron-down"></i>
+                    </div>
+                </div>
+                <!-- End of cart item -->
+
+            </div>
+            <div class="cart-footer">
+                <h3>Your total: $ <span class="cart-total">0</span></h3>
+                <button class="clear-cart banner-btn">clear cart</button>
+            </div>
         </div>
     </div>
+
     <!-- end of cart -->
     <script src="app.js"></script>
 </body>
